Fixed a bug that caused Shopp to always take over the site-search; Shopp should only override the search when the search is taking place from a Shopp-driven page Fixed a bug that was hiding parent categories with no products even when listing children of that category that do have products Fixed an issue with sub-category list URLs Fixed an issue with breadcrumbs not showing the full path Corrected the WordPress-integrated login system to use user data and auto populate the checkout form with cusotmer-related information Added a file verification check when adding a product file by file path Added a welcome screen that is by default displayed after activation Further enhanced internationalization
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@272 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/core/ui/styles/admin.css
+++ b/core/ui/styles/admin.css
@@ -9,6 +9,8 @@ body { position: relative; }
 
 .shopp table td.featured { background: url('/wp-content/plugins/shopp/core/ui/icons/featured.png') no-repeat center center; }
 
+#welcome ul { padding-left: 20px; list-style-type: square; }
+#welcome ul li { margin-top: 18px; }
 #status { padding-left: 20px; font-weight: bold; }
 #status.updating { background: url('/wp-content/plugins/shopp/core/ui/icons/updating.gif') no-repeat left center; }
 #check-update.updating { background: url('/wp-content/plugins/shopp/core/ui/icons/updating.gif') no-repeat 4px center; padding-left: 25px; }
@@ -17,6 +19,9 @@ body { position: relative; }
 #product #tagchecklist { margin-left: 0; }
 #product #tagchecklist span { background: #fff; padding: 1px 5px 1px 18px; margin-right: 5px; margin-top: 5px; border: 1px solid #dfdfdf; }
 #product #tagchecklist span a { margin-left: -13px;  }
+#product input.filepath { padding-right: 16px; width: 90%; }
+#product input.verifying { background: url('/wp-content/plugins/shopp/core/ui/icons/updating.gif') no-repeat right center; }
+#product input.warning { background: url('/wp-content/plugins/shopp/core/ui/icons/error.png') no-repeat right center; }
 
 .form-table input.toggle { margin-left: -13px; }
 .form-table { position: relative; }
